# dune3d

./: .cirrus.yml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Info.plist  README.md  build_cross.txt  bundle-macos.sh  check_dll.sh  check_version.py  flake.nix  macos-arm64.ini  macos-launcher.sh  macos-x86_64.ini  make_bindist.sh  make_color_presets.py  make_icon_texture_atlas.py  make_rc.py  make_version.py  merge_gresource.py  meson.build  org.dune3d.dune3d.desktop  org.dune3d.dune3d.metainfo.xml  setup-macos.sh  test_core.cpp  version.py
.github/workflows/: all.yml  flutter.yml  freebsd.yml  macos.yml  win32.yml
doc/: building.md
docker/: Dockerfile
dune3d_flutter/: .gitignore  README.md  pubspec.yaml
dune3d_flutter/lib/: core_bridge.dart  main.dart
dune3d_flutter/linux/: CMakeLists.txt
dune3d_flutter/test/: widget_test.dart
scripts/: CHANGELOG.md.in  add_tool.py  app_versions.yml  build_macos.sh  bundle_macos.sh  make_changelog.py  run_clangformat.sh
src/: color.hpp  constraints_box.cpp  constraints_box.hpp  dune3d.css  dune3d.gresource.darwin.xml  dune3d.gresource.xml  dune3d_application.cpp  dune3d_application.hpp  dune3d_appwindow.cpp  dune3d_appwindow.hpp  dune3d_core_api.cpp  dune3d_core_api.h  editor.cpp  editor.hpp  editor_workspace_browser.cpp  group_editor.cpp  idocument_view.hpp  main.cpp  tool_popover.cpp  tool_popover.hpp  window.cmb  window.ui  workspace_browser.cpp  workspace_browser.hpp
src/action/: action.cpp  action.hpp  action_catalog.cpp  action_catalog.hpp  action_id.hpp
src/canvas/: appearance.cpp  appearance.hpp  background_renderer.cpp  background_renderer.hpp  base_renderer.cpp  base_renderer.hpp  bitmap_font_util.cpp  bitmap_font_util.hpp  box_selection.cpp  box_selection.hpp  canvas.cpp  canvas.hpp  chunk.cpp  chunk.hpp  clipping_planes.hpp  color_palette.hpp  face.hpp  face_renderer.cpp  face_renderer.hpp  gl_util.cpp  gl_util.hpp  glyph_3d_renderer.cpp  glyph_3d_renderer.hpp  glyph_renderer.cpp  glyph_renderer.hpp  icanvas.hpp  icon_renderer.cpp  icon_renderer.hpp  icon_texture_map.hpp  iselection_filter.hpp  iselection_menu_creator.hpp  line_renderer.cpp  line_renderer.hpp  picture_renderer.cpp  picture_renderer.hpp  point_renderer.cpp  point_renderer.hpp  projection.hpp  rotation_scheme.hpp  selectable_checkbutton.hpp  (+6 more)
src/core/: core.cpp  core.hpp  create_tool.cpp  icore.hpp  idocument_info.hpp  idocument_provider.hpp  tool.cpp  tool.hpp  tool_data.hpp  tool_data_create_circular_sweep_group.hpp  tool_data_path.hpp  tool_data_window.hpp  tool_id.hpp
src/dialogs/: dialogs.cpp  dialogs.hpp  enter_datum_window.cpp  enter_datum_window.hpp  enter_text_window.cpp  enter_text_window.hpp  rotate_window.cpp  rotate_window.hpp  tool_window.cpp  tool_window.hpp
src/document/: all_constraints_fwd.hpp  all_entities.hpp  all_groups.hpp  all_groups_fwd.hpp  constraint.cpp  constraint.hpp  constraint_arc_arc_tangent.cpp  constraint_arc_arc_tangent.hpp  constraint_arc_line_tangent.cpp  constraint_arc_line_tangent.hpp  constraint_diameter_radius.cpp  constraint_diameter_radius.hpp  constraint_equal_length.cpp  constraint_equal_length.hpp  constraint_equal_radius.cpp  constraint_hv.cpp  constraint_hv.hpp  constraint_line_points_perpendicular.cpp  constraint_line_points_perpendicular.hpp  constraint_midpoint.cpp  constraint_midpoint.hpp  constraint_parallel.cpp  constraint_parallel.hpp  constraint_point_distance.cpp  constraint_point_distance.hpp  constraint_point_distance_hv.cpp  constraint_point_distance_hv.hpp  constraint_point_on_circle.cpp  constraint_point_on_circle.hpp  constraint_point_on_line.cpp  constraint_point_on_line.hpp  constraint_points_coincident.cpp  constraint_points_coincident.hpp  constraint_same_orientation.cpp  constraint_workplane_normal.cpp  document.cpp  document.hpp  entity.cpp  entity.hpp  entity_and_point.cpp  (+44 more)
src/editor/: buffer.cpp  buffer.hpp  changeable_commit_mode.cpp  changeable_commit_mode.hpp  document_view.cpp  document_view.hpp  editor.cpp  editor.hpp  editor_action.cpp  editor_delete_items_popup.cpp  editor_export.cpp  editor_interface.hpp  editor_tool.cpp  editor_workspace_browser.cpp  editor_workspace_view.cpp  group_editor.cpp  group_editor.hpp  idocument_view_provider.hpp  selection_editor.cpp  selection_editor.hpp  selection_menu_creator.cpp  selection_menu_creator.hpp  tool_popover.cpp  tool_popover.hpp  workspace_browser.cpp  workspace_browser.hpp
src/icons/: dune3d.icns
src/import_dxf/: dxf_importer.cpp  dxf_importer.hpp
src/import_step/: import.hpp  imported_step.hpp  shapes.hpp  step_import_manager.cpp  step_import_manager.hpp  step_importer.cpp  step_importer.hpp
src/in_tool_action/: in_tool_action.hpp  in_tool_action_catalog.cpp  in_tool_action_catalog.hpp
src/ipc/: ipc_server.cpp  ipc_server.hpp  ipc_session.cpp  ipc_session.hpp
src/logger/: log_dispatcher.cpp  log_dispatcher.hpp  log_util.hpp  logger.cpp  logger.hpp
src/preferences/: action_editor.cpp  action_editor.hpp  canvas.ui  color_presets.hpp  in_tool_keys_default.json  key_sequences.ui  keys_default.darwin.json  keys_default.json  preferences.cpp  preferences.hpp  preferences_provider.cpp  preferences_provider.hpp  preferences_row.cpp  preferences_row.hpp  preferences_window.cpp  preferences_window.hpp  preferences_window_canvas.cpp  preferences_window_canvas.hpp  preferences_window_in_tool_keys.cpp  preferences_window_in_tool_keys.hpp  preferences_window_keys.cpp  preferences_window_keys.hpp  preferences_window_keys_base.cpp  preferences_window_keys_base.hpp  preferences_window_misc.cpp  preferences_window_misc.hpp
src/python_module/: dune3d_py.cpp  example.py
src/render/: renderer.cpp  renderer.hpp
src/system/: solve_result.hpp  system.cpp  system.hpp
src/util/: action_label.cpp  action_label.hpp  arc_util.cpp  arc_util.hpp  badge.hpp  bbox_accumulator.hpp  changeable.hpp  cluster_content.cpp  cluster_content.hpp  datum_unit.hpp  exception_util.cpp  exception_util.hpp  file_version.cpp  file_version.hpp  fs_util.cpp  fs_util.hpp  glm_util.cpp  lut.cpp  (+39 more)
wix/: dune3d.wxs  files.py  install.bat  wix_version.py
(+457 files in other folders)
